# cugenopt

./: .gitignore  README.md  run.sh
benchmark/common/: bench_common.cuh  instances.py
benchmark/experiments/e0_diagnosis/: bench_diagnosis.cu  run_diagnosis.sh
benchmark/experiments/e10_large_scale/: README.md  gpu.cu  large_tsp_problem.cuh  large_vrp_problem.cuh
benchmark/experiments/e11_ultra_large/: medium_vrp.cuh  optimized_vrp.cuh  optimized_vrp_v2.cuh  test_e11.cu  ultra_large_tsp.cuh  ultra_large_vrp.cuh
benchmark/experiments/e12_extreme_scale/: extreme_tsp.cuh  extreme_vrp.cuh  test_e12.cu
benchmark/experiments/e13_multiobjective/: DESIGN.md  E13_REPORT.md  E13_RESULTS_SUMMARY.md  Makefile  (+6 more)
prototype/: Makefile  test_multi_gpu.cu  test_multi_gpu_b3.cu
prototype/core/: cuda_utils.cuh  init_heuristic.cuh  init_selection.cuh  multi_gpu_solver.cuh  operators.cuh  solver.cuh  types.cuh
prototype/problems/: bin_packing.cuh  jsp.cuh  load_balance.cuh  qap.cuh  tsp.cuh  tsp_large.cuh  vrp.cuh
python/: MANIFEST.in  README.md  pyproject.toml  test_cugenopt.py  test_jit.py
python/cugenopt/: __init__.py  builtins.py  jit.py  jit_template.cu  operators.py  validation.py
python/cugenopt/include/core/: gpu_cache.cuh  operators.cuh  population.cuh  relation_matrix.cuh  solver.cuh  types.cuh
python/cugenopt/include/problems/: assignment.cuh  graph_color.cuh  knapsack.cuh  qap.cuh  schedule.cuh  tsp.cuh  tsp_xlarge.cuh  vrp.cuh  vrptw.cuh
python/cugenopt/operator_packs/: __init__.py  graph_color.py  knapsack.py  tsp.py
skills/cugenopt-problem-gen/: SKILL.md
(+22 files in other folders)
