[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cugenopt"
version = "0.2.0"
description = "GPU-accelerated general-purpose metaheuristic solver for combinatorial optimization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "cuGenOpt Team"}]
keywords = ["optimization", "metaheuristic", "GPU", "CUDA", "combinatorial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
jit = ["nvidia-cuda-nvcc-cu12>=12.0"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/cugenopt/cugenopt"
Documentation = "https://github.com/cugenopt/cugenopt#readme"

[tool.setuptools.packages.find]
include = ["cugenopt*"]

[tool.setuptools.package-data]
cugenopt = [
    "jit_template.cu",
    "include/**/*.cuh",
]
